# IFRit

./: README
LLVM/: CMakeLists.txt
LLVM/IFRit/: CMakeLists.txt  InsertDRDCalls.cpp
Runtime/: BPlusTree.c  BPlusTree.h  GetBacktrace.c  GetBacktrace.h  IFR.c  IFR.h  IFR_Runtime.c  IFR_Runtime.cpp  IFR_Runtime.h  IFR_Runtime_array.c  IFR_Runtime_ht.c  IFR_Runtime_max_counters.c  Makefile  TestBPlusTree.c
Test/: Makefile  test.c
